--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>
+		<dependency>
+      		<groupId>org.springframework.security</groupId>
+      		<artifactId>spring-security-web</artifactId>
+      	</dependency>      	
 	</dependencies>
 
 	<build>
