--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.2.1</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
