--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+      	</dependency>		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -80,7 +85,8 @@
 		<dependency>
       		<groupId>org.springframework.security</groupId>
       		<artifactId>spring-security-web</artifactId>
-      	</dependency>      	
+      	</dependency>
+      	      	
 	</dependencies>
 
 	<build>
