--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #Banco Local - Autotrac Launcher
