--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 $ cat application.properties
 server.port = 8083
+
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
